<resources>

    <string name="app_name">Go Dutch</string>
    <string name="WelcomeInfo">欢迎 您使用AA费用小助手 !</string>
    <string name="appGridTextPayoutAdd">记录消费</string>
    <string name="appGridTextPayoutManage">查询消费</string>
    <string name="appGridTextAccountBookManage">账本管理</string>
    <string name="appGridTextStatisticsManage">统计管理</string>
    <string name="appGridTextCategoryManage">类别管理</string>
    <string name="appGridTextUserManage">人员管理</string>
    <string name="addOrEditUserNameHint">人员名称</string>
  
    <string name="DialogTitleUser">%s人员</string>
    <string name="TitleAdd">新建</string>
    <string name="TitleEdit">修改</string>
    <string name="ButtonTextSave">保存</string>
    <string name="ButtonTextCancel">取消</string>
    <string name="ButtonTextYes">是</string>
    <string name="ButtonTextNo">否</string>
    <string name="ButtonTextBack">返回</string>
 
    <string name="TipsAddSucceed">保存成功</string>
    <string name="TipsAddFail">保存失败</string>
    <string name="TipsDeleteFail">删除失败</string>
    <string name="MenuTextEdit">修改</string>
    <string name="MenuTextDelete">删除</string>
    <string name="DialogTitleDelete">删除提示</string>
    <string name="DialogMessageUserDelete">你确定要删除%s用户吗?</string>
    <string name="DeleteSuccessed">删除成功</string>
    <string name="DialogTitleAccountBook">%s账本</string>
    
   
    <string name="CheckBoxTextIsDefault">设置为默认账本</string>
    
    <string name="PayoutTypeFlag">消费</string>
    <string name="TextViewTextChildrenCategory">%s子类</string>
    <string name="TextViewTextCategoryName">类别名称</string>
    <string name="TextViewTextParentID">所属分类</string>
    <string name="CheckDataTextCategoryExist">该类别已经存在，请换个类别名称</string>
    <string name="DialogMessageCategoryDelete">你确定要删除%s类别吗?</string>
    
    <string name="ButtonTextSelectAccountBook">选择账本</string>
    <string name="ButtonTextEnterAmount">输入金额</string>
    <string name="ButtonTextSelectPayoutDate">选择日期</string>
    <string name="ButtonTextSelectPayoutType">计算方式</string>
    <string name="ButtonTextSelectUser">选择消费人</string>
    <string name="ButtonTextSelectCategory">选择类别</string>
    <string name="ButtonTextDatabaseBackup">数据备份</string>
    <string name="ButtonTextDatabaseRestore">数据还原</string>
    
    <string name="HintAccountBookName">账本名称</string>
    <string name="HintEnterAmount">请输入金额</string>
    <string name="HintEnterComment">请输入消费心得或备注</string>
    <string name="HintEnterCategory">请输入或选择消费类别</string>
    <string name="HintSelectUser">请选择消费人，第一位为付款人</string>
    <string name="HintUserName">人员名称</string>
    
    <string name="ButtonTextDot">.</string>
	<string name="ButtonTextOne">1</string>
	<string name="ButtonTextTwo">2</string>
	<string name="ButtonTextThree">3</string>
	<string name="ButtonTextFour">4</string>
	<string name="ButtonTextFive">5</string>
	<string name="ButtonTextSix">6</string>
	<string name="ButtonTextSeven">7</string>
	<string name="ButtonTextEight">8</string>
	<string name="ButtonTextNine">9</string>
	<string name="ButtonTextZero">0</string>
	<string name="ButtonTextChange">更正</string>
	<string name="ButtonTextOk">确定</string>
	
	<string name="CheckDataTextChineseEnglishNum">%s必须是英文、中文与数字</string>
    <string name="CheckDataTextMoney">金额必须是数字，并且不能超过小数点后两位数</string>
    <string name="CheckDataTextCategoryIsNull">请选择一个消费类别</string>
    <string name="CheckDataTextPayoutUser">均分或借贷请至少选择两个消费人</string>
    <string name="CheckDataTextPayoutUser2">个人消费请至少选择一个消费人</string>
    <string name="CheckDataTextPayoutUserIsNull">请选择消费人</string>
    <string name="CheckDataTextAccountBookExist">该账本已经存在，请换个账本名称</string>
    <string name="CheckDataTextUserExist">该用户已经存在，请换个用户名称</string>
    
    <string name="ActivityTitleAccountBook">账本管理</string>
    <string name="ActivityTitleCategory">类别管理(%s)</string>
    <string name="ActivityTitleCategoryAddOrEdit">%s类别</string>
    <string name="ActivityTitleUser">人员管理(%s)</string>
    <string name="ActivityTitlePayoutAddOrEdit">%s消费</string>
    <string name="ActivityTitlePayout">查询消费-%1$s(%2$s)</string>
    <string name="ActivityTitleStatistics">统计管理-%1$s</string>
    <string name="ActivityCategoryTotal">统计类别</string>
    
    <string name="TextViewTextPayoutTotal">共%1$s笔，合计消费%2$s</string>
    <string name="TextViewTextAccountBookPayoutTotal">共%s笔 </string>
    <string name="TextViewTextAccountBookPayoutMoney">合计消费%s元</string>
    <string name="TextViewTextPayoutNoData">没有查询到消费记录</string>
    
    <string name="DialogMessagePayoutDelete">你确定要删除%s消费记录吗?</string>
    <string name="DialogTitleDatabaseBackup">数据备份</string>
    
    <string name="StatisticsProgressDialogTitle">统计</string>
	<string name="StatisticsProgressDialogWaiting">正在统计中，请稍候...</string>

</resources>